<resources>
    <string name="app_name">Tapsell Kotlin Sample</string>
    <string name="interstitial">Interstitial</string>
    <string name="standard_banner">Standard Banner</string>
    <string name="reward">Reward</string>
    <string name="pre_roll">Pre-roll</string>
    <string name="zone_types">Zone Types</string>
    <string name="interstitial_banner">Request Interstitial Banner</string>
    <string name="interstitial_video">Request Interstitial Video</string>
    <string name="show_ad">Show Ad</string>
    <string name="native_string">Native</string>
    <string name="native_banner_in_activity">Native Banner In Activity</string>
    <string name="native_banner_in_list">Native Banner In List</string>
    <string name="native_video_in_activity">Native Video In Activity</string>
    <string name="native_video_in_list">Native Video In List</string>
    <string name="request_native_banner">Request Native Banner</string>
    <string name="request_native_video">Request Native Video</string>
    <string name="request_pre_roll_video">Request Pre-Roll Video</string>
    <string name="request_standard_banner">Request Standard Banner</string>
    <string name="request_reward_banner">Request Reward Banner</string>
</resources>
